--- a/商品介绍.html
+++ b/商品介绍.html
@@ -3,12 +3,12 @@
 
 	<head>
 		<meta charset="utf-8" />
-		<title>电商平台首页</title>
+		<title>商品介绍</title>
 		<link rel="stylesheet" href="css/reset.css" type="text/css" />
 		<link rel="stylesheet" href="css/main.css" type="text/css" />
 	</head>
 
-	<body>
+	<body class="grey">
 		<div class="headerBar">
 			<div class="topBar">
 				<div class="comWidth">
@@ -39,7 +39,7 @@
 				<div class="comWidth">
 					<div class="shopClass fl">
 						<h3>全部商品分类<i></i></h3>
-						<div class="shopClass_show show">
+						<div class="shopClass_show hide">
 							<dl class="shopClass_items">
 								<dt>
        	  	  					<a href="#" class="b">手机</a>
@@ -196,215 +196,127 @@
 				</div>
 			</div>
 		</div>
-		<div class="banner comWidth clearfix ">
-			<div class="banner_bar banner_big">
-				<ul class="imgBox">
-					<li>
-						<a href="#"><img src="img/banner/banner01.jpg" alt="banner"></a>
-					</li>
-					<li>
-						<a href="#"><img src="img/banner/banner01.jpg" alt="banner"></a>
-					</li>
-				</ul>
-				<div class="imgNum">
-					<a href="#" class="active"></a>
-					<a href="#"></a>
-					</a>
-					<a href="#"></a>
-					</a>
-					<a href="#"></a>
-				</div>
-			</div>
+		<div class="userPosition comWidth">
+			<strong><a href="#">首页</a><span>&nbsp;&gt;&nbsp;</span></strong>
+			<a href="#">平板电脑</a><span>&nbsp;&gt;&nbsp;</span>
+			<a href="#">平板电脑 ></a><span>&nbsp;&gt;&nbsp;</span>
+			<a href="#">Apple 苹果 </a><span>&nbsp;&gt;&nbsp;</span>
+			<em>MD531CH/A</em>
 		</div>
-		<div class="shopTit comWidth">
-			<span class="icon"></span>
-			<h3>家用电脑</h3>
-			<a href="#" class="more">更多&gt;&gt;</a>
-		</div>
-		<div class="shopList comWidth clearfix">
-			<div class="leftArea">
-				<div class="banner_bar banner_sm">
-					<ul class="imgBox">
-						<li>
-							<a href="#"><img src="img/banner/banner05.gif" alt="banner"></a>
-						</li>
-						<li>
-							<a href="#"><img src="img/banner/banner05.gif" alt="banner"></a>
-						</li>
-					</ul>
-					<div class="imgNum">
-						<a href="#" class="active"></a>
-						<a href="#"></a>
-						</a>
-						<a href="#"></a>
-						</a>
-						<a href="#"></a>
+		<div class="descripition_info comWidth">
+			<div class="descripition clearfix">
+				<div class="leftArea">
+					<div class="descripition_img">
+						<div class="big">
+							<img src="img/shop/shop.gif" alt="商品">
+						</div>
+						<ul class="sm clearfix">
+							<li>
+								<a href="#"><img src="img/shop/shop1.gif" alt="商品" class="active"></a>
+							</li>
+							<li>
+								<a href="#"><img src="img/shop/shop2.gif" alt="商品"></a>
+							</li>
+							<li>
+								<a href="#"><img src="img/shop/shop3.gif" alt="商品"></a>
+							</li>
+							<li>
+								<a href="#"><img src="img/shop/shop4.gif" alt="商品"></a>
+							</li>
+							<li>
+								<a href="#"><img src="img/shop/shop5.gif" alt="商品"></a>
+							</li>
+						</ul>
 					</div>
 				</div>
-			</div>
-			<div class="rightArea">
-				<div class="shopList_top clearfix">
-					<div class="shop_items">
-						<div class="shop_img">
-							<a href="#"><img src="img/banner/banner06.gif" alt=""></a>
+				<div class="rightArea">
+					<div class="des_content">
+						<h3 class="des_content_tit">全网底价 Apple 苹果 iPad mini 16G wifi版 平板电脑 前白后银 MD531CH/A 银白两色生产批次不同混合发货</h3>
+						<div class="dl clearfix">
+							<div class="dt">慕课价</div>
+							<div class="dd"><span class="des_money"><em>¥ 998.9</em></span></div>
 						</div>
-						<h3>HTC新渴望8系列</h3>
-						<p>1899元</p>
-					</div>
-					<div class="shop_items">
-						<div class="shop_img">
-							<a href="#"><img src="img/banner/banner06.gif" alt=""></a>
+						<div class="dl clearfix">
+							<div class="dt">优惠</div>
+							<div class="dd"><span class="hg"><i class="hg_icon">满换购</i>购ipad加价优惠够配件或USB充电插座</span></div>
 						</div>
-						<h3>HTC新渴望8系列</h3>
-						<p>1899元</p>
-					</div>
-					<div class="shop_items">
-						<div class="shop_img">
-							<a href="#"><img src="img/banner/banner06.gif" alt=""></a>
+						<div class="des_position">
+							<div class="dl clearfix">
+								<div class="dt">送到</div>
+								<div class="dd clearfix">
+									<div class="select">
+										<h3>上海浦东新区</h3><span></span>
+										<ul class="show_select">
+											<li>徐泾区</li>
+											<li>外滩</li>
+											<li>漕河泾</li>
+										</ul>
+									</div>
+									<span class="theGoods">有货，可当日出货</span>
+								</div>
+							</div>
+							<div class="dl clearfix">
+								<div class="dt selectColor">选择颜色</div>
+								<div class="dd clearfix">
+                                   <div class="des_item des_active">
+                                   	  白色
+                                   </div>
+                                   <div class="des_item">
+                                   	  黑色
+                                   </div>
+                                   <div class="des_item">
+                                   	  灰色
+                                   </div>
+								</div>
+							</div>
+							<div class="dl clearfix">
+								<div class="dt des_more">选择版本</div>
+								<div class="dd clearfix">
+                                   <div class="des_item des_item_sm des_active">
+                                   	  WIFI 16G
+                                   </div>
+                                   <div class="des_item des_item_sm">
+                                   	  WIFI 32G
+                                   </div>
+                                   <div class="des_item des_item_sm">
+                                   	  WIFI 64G
+                                   </div>
+                                    <div class="des_item des_item_sm">
+                                   	  WIFI Cellular 32G
+                                   </div>
+                                    <div class="des_item des_item_sm">
+                                   	 WIFI Cellular 64G
+                                   </div>
+                                    <div class="des_item des_item_sm">
+                                   	  WIFI Cellular 16G
+                                   </div>
+								</div>
+							</div>
+						    <div class="dl clearfix">
+						    	<div class="dt">数量</div>
+						    	<div class="dd clearfix">
+						    		<div class="des_number">
+						    			<div class="reduction">-</div>
+						    			<div class="des_input">
+						    				<input type="text"> 
+						    			</div>
+						    			<div class="plus">+</div>	
+						    		</div>
+						    		<span class="xg">限购<em>9</em>件</span>
+						    	</div>
+						    </div>
 						</div>
-						<h3>HTC新渴望8系列</h3>
-						<p>1899元</p>
-					</div>
-					<div class="shop_items">
-						<div class="shop_img">
-							<a href="#"><img src="img/banner/banner06.gif" alt=""></a>
+						<div class="des_select">
+							已选择&nbsp;&nbsp;<span>"白色|WIFI 16G"</span>
 						</div>
-						<h3>HTC新渴望8系列</h3>
-						<p>1899元</p>
-					</div>
-				</div>
-				<div class="shopList_sm  clearfix">
-					<div class="shopitem_sm">
-						<div class="shopitem_smImg">
-							<a href="#"><img src="img/banner/banner07.gif" alt="" </a>
-						</div>
-						<div class="shopitem_text">
-							<p>NFC技术一碰轻松配对！触摸屏幕</p>
-							<h3>¥ 149.00</h3>
-						</div>
-					</div>
-					<div class="shopitem_sm">
-						<div class="shopitem_smImg">
-							<a href="#"><img src="img/banner/banner08.gif" alt="" </a>
-						</div>
-						<div class="shopitem_text">
-							<p>Samsung三星GALAXY Grand2</p>
-							<h3>¥ 2000.00</h3>
-						</div>
-					</div>
-					<div class="shopitem_sm">
-						<div class="shopitem_smImg">
-							<a href="#"><img src="img/banner/banner00.gif" alt="" </a>
-						</div>
-						<div class="shopitem_text">
-							<p>全网低价 Apple苹果iPad mini1</p>
-							<h3>¥ 1888.00</h3>
-						</div>
-					</div>
-					<div class="shopitem_sm">
-						<div class="shopitem_smImg">
-							<a href="#"><img src="img/banner/banner09.gif" alt="" </a>
-						</div>
-						<div class="shopitem_text">
-							<p>pple苹果 全新Retina屏MacBoo</p>
-							<h3>¥ 20020.00</h3>
-						</div>
-					</div>
-				</div>
-			</div>
-		</div>
-		<div class="shopTit comWidth">
-			<span class="icon"></span>
-			<h3>食品酒水</h3>
-			<a href="#" class="more">更多&gt;&gt;</a>
-		</div>
-		<div class="shopList comWidth clearfix">
-			<div class="leftArea">
-				<div class="banner_bar banner_sm">
-					<ul class="imgBox">
-						<li>
-							<a href="#"><img src="img/banner/1.首页_r6_c2.gif" alt="banner"></a>
-						</li>
-						<li>
-							<a href="#"><img src="img/banner/1.首页_r6_c2.gif" alt="banner"></a>
-						</li>
-					</ul>
-					<div class="imgNum">
-						<a href="#" class="active"></a>
-						<a href="#"></a>
-						</a>
-						<a href="#"></a>
-						</a>
-						<a href="#"></a>
-					</div>
-				</div>
-			</div>
-			<div class="rightArea">
-				<div class="shopList_top clearfix">
-					<div class="shop_items">
-						<div class="shop_img">
-							<a href="#"><img src="img/banner/banner10.gif" alt=""></a>
-						</div>
-						<h3>三月美食狂享购</h3>
-						<p>99元</p>
-					</div>
-					<div class="shop_items">
-						<div class="shop_img">
-							<a href="#"><img src="img/banner/banner10.gif" alt=""></a>
-						</div>
-						<h3>三月美食狂享购</h3>
-						<p>19元</p>
-					</div>
-					<div class="shop_items">
-						<div class="shop_img">
-							<a href="#"><img src="img/banner/banner10.gif" alt=""></a>
-						</div>
-						<h3>三月美食狂享购</h3>
-						<p>89元</p>
-					</div>
-					<div class="shop_items">
-						<div class="shop_img">
-							<a href="#"><img src="img/banner/banner10.gif" alt=""></a>
-						</div>
-						<h3>三月美食狂享购</h3>
-						<p>19元</p>
-					</div>
-				</div>
-				<div class="shopList_sm  clearfix">
-					<div class="shopitem_sm">
-						<div class="shopitem_smImg">
-							<a href="#"><img src="img/banner/banner11.gif" alt="" </a>
-						</div>
-						<div class="shopitem_text">
-							<p>康比特 维他保咀嚼片 60片</p>
-							<h3>¥ 800.00</h3>
-						</div>
-					</div>
-					<div class="shopitem_sm">
-						<div class="shopitem_smImg">
-							<a href="#"><img src="img/banner/banner11.gif" alt="" </a>
-						</div>
-						<div class="shopitem_text">
-							<p>康比特 维他保咀嚼片 40片</p>
-							<h3>¥ 600.00</h3>
-						</div>
-					</div>
-					<div class="shopitem_sm">
-						<div class="shopitem_smImg">
-							<a href="#"><img src="img/banner/banner11.gif" alt="" </a>
-						</div>
-						<div class="shopitem_text">
-							<p>康比特 维他保咀嚼片 20片</p>
-							<h3>¥ 300.00</h3>
-						</div>
-					</div>
-					<div class="shopitem_sm">
-						<div class="shopitem_smImg">
-							<a href="#"><img src="img/banner/banner11.gif" alt="" </a>
-						</div>
-						<div class="shopitem_text">
-							<p>康比特 维他保咀嚼片 10片</p>
-							<h3>¥ 100.00</h3>
+						<div class="shop_buy">
+							<a href="#">
+								<img class="shoppping_btn" src="img/icon/4.详细页 - 商品评价_r4_c4.gif" alt="">
+							</a>
+							<span class="line"></span>
+							<a href="#">
+								<img class="buy_btn" src="img/icon/4.详细页 - 商品评价_r4_c4.gif" alt="">
+							</a>
 						</div>
 					</div>
 				</div>
@@ -413,13 +325,11 @@
 		<div class="h2_25"></div>
 		<div class="footer">
 			<p><a href="#">慕课简介</a><i>|</i>
-			   <a href="#">慕课公告</a><i>|</i>
-			   <a href="#">招纳贤士</a><i>|</i> 
-				联系我们|客服热线：400-675-1234</p>
-			<p>Copyright &copy; 2006 - 2014 慕课版权所有&nbsp;&nbsp;&nbsp;
-			       京ICP备09037834号&nbsp;&nbsp;&nbsp;  
-			       京ICP证B1034-8373号&nbsp;&nbsp;&nbsp;   
-			                  某市公安局XX分局备案编号：123456789123</p>
+				<a href="#">慕课公告</a><i>|</i>
+				<a href="#">招纳贤士</a><i>|</i> 联系我们|客服热线：400-675-1234
+			</p>
+			<p>Copyright &copy; 2006 - 2014 慕课版权所有&nbsp;&nbsp;&nbsp; 京ICP备09037834号&nbsp;&nbsp;&nbsp; 京ICP证B1034-8373号&nbsp;&nbsp;&nbsp; 某市公安局XX分局备案编号：123456789123
+			</p>
 			<p class="webLogo">
 				<a href="#"><img src="img/webLogo.gif" alt="logo"></a>
 				<a href="#"><img src="img/webLogo.gif" alt="logo"></a>
