--- a/产品筛选.html
+++ b/产品筛选.html
@@ -3,7 +3,7 @@
 
 	<head>
 		<meta charset="utf-8" />
-		<title>产品分类</title>
+		<title>产品筛选</title>
 		<link rel="stylesheet" href="css/reset.css" type="text/css" />
 		<link rel="stylesheet" href="css/main.css" type="text/css" />
 	</head>
@@ -252,7 +252,6 @@
                             <li><a href="#">Apple/苹果</a></li>
                             <li><a href="#">Sansung/三星</a></li>
                             <li><a href="#">Apple/苹果</a></li>
-
 					      </ul>
 						</dd>
 						
