--- a/商品介绍.html
+++ b/商品介绍.html
@@ -258,53 +258,53 @@
 							<div class="dl clearfix">
 								<div class="dt selectColor">选择颜色</div>
 								<div class="dd clearfix">
-                                   <div class="des_item des_active">
-                                   	  白色
-                                   </div>
-                                   <div class="des_item">
-                                   	  黑色
-                                   </div>
-                                   <div class="des_item">
-                                   	  灰色
-                                   </div>
+									<div class="des_item des_active">
+										白色
+									</div>
+									<div class="des_item">
+										黑色
+									</div>
+									<div class="des_item">
+										灰色
+									</div>
 								</div>
 							</div>
 							<div class="dl clearfix">
 								<div class="dt des_more">选择版本</div>
 								<div class="dd clearfix">
-                                   <div class="des_item des_item_sm des_active">
-                                   	  WIFI 16G
-                                   </div>
-                                   <div class="des_item des_item_sm">
-                                   	  WIFI 32G
-                                   </div>
-                                   <div class="des_item des_item_sm">
-                                   	  WIFI 64G
-                                   </div>
-                                    <div class="des_item des_item_sm">
-                                   	  WIFI Cellular 32G
-                                   </div>
-                                    <div class="des_item des_item_sm">
-                                   	 WIFI Cellular 64G
-                                   </div>
-                                    <div class="des_item des_item_sm">
-                                   	  WIFI Cellular 16G
-                                   </div>
+									<div class="des_item des_item_sm des_active">
+										WIFI 16G
+									</div>
+									<div class="des_item des_item_sm">
+										WIFI 32G
+									</div>
+									<div class="des_item des_item_sm">
+										WIFI 64G
+									</div>
+									<div class="des_item des_item_sm">
+										WIFI Cellular 32G
+									</div>
+									<div class="des_item des_item_sm">
+										WIFI Cellular 64G
+									</div>
+									<div class="des_item des_item_sm">
+										WIFI Cellular 16G
+									</div>
 								</div>
 							</div>
-						    <div class="dl clearfix">
-						    	<div class="dt">数量</div>
-						    	<div class="dd clearfix">
-						    		<div class="des_number">
-						    			<div class="reduction">-</div>
-						    			<div class="des_input">
-						    				<input type="text"> 
-						    			</div>
-						    			<div class="plus">+</div>	
-						    		</div>
-						    		<span class="xg">限购<em>9</em>件</span>
-						    	</div>
-						    </div>
+							<div class="dl clearfix">
+								<div class="dt">数量</div>
+								<div class="dd clearfix">
+									<div class="des_number">
+										<div class="reduction">-</div>
+										<div class="des_input">
+											<input type="text">
+										</div>
+										<div class="plus">+</div>
+									</div>
+									<span class="xg">限购<em>9</em>件</span>
+								</div>
+							</div>
 						</div>
 						<div class="des_select">
 							已选择&nbsp;&nbsp;<span>"白色|WIFI 16G"</span>
@@ -318,7 +318,184 @@
 								<img class="buy_btn" src="img/icon/4.详细页 - 商品评价_r4_c4.gif" alt="">
 							</a>
 						</div>
+						<div class="des_note">
+							<span class="note">注意：此商品可提供普通发票，不提供增值税发票。</span>
+						</div>
 					</div>
+				</div>
+			</div>
+		</div>
+		<div class="hr_15"></div>
+		<div class="des_info comWidth clearfix">
+			<div class="leftArea">
+				<div class="recommend">
+					<h3 class="tit">同价位</h3>
+					<div class="item">
+						<div class="img_item">
+							<a href="#"><img src="img/banner/phone05.gif" alt=""></a>
+						</div>
+						<a href="#" class="text">Samsung 三星 GALAXY Tab 3 8.0 WLAN版本 T310平板电话</a>
+						<p class="money">¥ 1889</p>
+					</div>
+					<div class="item">
+						<div class="img_item">
+							<a href="#"><img src="img/banner/phone05.gif" alt=""></a>
+						</div>
+						<a href="#" class="text">Samsung 三星 GALAXY Tab 3 8.0 WLAN版本 T310平板电话</a>
+						<p class="money">¥ 1889</p>
+					</div>
+					<div class="item">
+						<div class="img_item">
+							<a href="#"><img src="img/banner/phone05.gif" alt=""></a>
+						</div>
+						<a href="#" class="text">Samsung 三星 GALAXY Tab 3 8.0 WLAN版本 T310平板电话</a>
+						<p class="money">¥ 1889</p>
+					</div>
+					<div class="item">
+						<div class="img_item">
+							<a href="#"><img src="img/banner/phone05.gif" alt=""></a>
+						</div>
+						<a href="#" class="text">Samsung 三星 GALAXY Tab 3 8.0 WLAN版本 T310平板电话</a>
+						<p class="money">¥ 1889</p>
+					</div>
+				</div>
+				<div class="hr_15"></div>
+				<div class="recommend">
+					<h3 class="tit">看了最终买</h3>
+					<div class="item">
+						<div class="img_item">
+							<a href="#"><img src="img/banner/phone05.gif" alt=""></a>
+						</div>
+						<a href="#" class="text">Samsung 三星 GALAXY Tab 3 8.0 WLAN版本 T310平板电话</a>
+						<p class="money">¥ 1889</p>
+					</div>
+					<div class="item">
+						<div class="img_item">
+							<a href="#"><img src="img/banner/phone05.gif" alt=""></a>
+						</div>
+						<a href="#" class="text">Samsung 三星 GALAXY Tab 3 8.0 WLAN版本 T310平板电话</a>
+						<p class="money">¥ 1889</p>
+					</div>
+				</div>
+			</div>
+			<div class="rightArea">
+				<div class="des_infoContent hide">
+					<ul class="des_tit">
+						<li class="active"><span>产品介绍</span></li>
+						<li><span>用户评价(4725)</span></li>
+					</ul>
+					<div class="ad">
+						<a href="#"><img src="img/banner/130364690780019046.jpg" alt=""></a>
+					</div>
+					<div class="info_text">
+						<div class="info_tit">
+							<h3>强烈推荐</h3>
+							<h4>货比三家， 还选</h4>
+						</div>
+						<p>热点: 首页模板优势:您的正确选择.专业美工设计首页模板选择猪八戒，专业美工设计，视觉营销设计!店铺装修托管，网店制定装修，一站式服务!海量设计师为您解决活动页设计难题!</p>
+						<div class="hr_45"></div>
+					</div>
+					<div class="info_text">
+						<div class="info_tit">
+							<h3>精美图片</h3>
+						</div>
+						<p>热点: 首页模板优势:您的正确选择.专业美工设计首页模板选择猪八戒，专业美工设计，视觉营销设计!店铺装修托管，网店制定装修，一站式服务!海量设计师为您解决活动页设计难题!</p>
+						<div class="hr_45"></div>
+						<img src="img/banner/130364690780019046.jpg" class="center">
+						<div class="hr_15"></div>
+					</div>
+				</div>
+				<div class="des_infoContent ">
+					<ul class="des_tit">
+						<li><span>产品介绍</span></li>
+						<li class="active"><span>用户评价(4725)</span></li>
+					</ul>
+					<h3 class="shopDes_tit">商品介绍</h3>
+					<div class="score_box clearfix">
+						<div class="score">
+							<span>4.7</span><em>分</em>
+						</div>
+						<div class="score_speed">
+							<ul class="score_speed_text">
+								<li class="speed_01">非常不满意</li>
+								<li class="speed_02">不满意</li>
+								<li class="speed_03">一般</li>
+								<li class="speed_04">满意</li>
+								<li>非常满意</li>
+							</ul>
+							<span class="parse">共18939位慕课网友参与评分</span>
+						</div>
+
+					</div>
+					<div class="review_tab">
+						<ul class="review fl">
+							<li><a href="#" class="active">全部</a></li>
+							<li><a href="#">满意(17926)</a></li>
+							<li><a href="#">一般(863)</a></li>
+							<li><a href="#">不满意(1011)</a></li>
+						</ul>
+						<div class="review_sort fr">
+							<a href="#" class 'review_time'>时间排序</a>
+							<a href="#" class="reivew_reco">推荐排序</a>
+						</div>
+					</div>
+					<div class="review_listBox">
+						<div class="review_list clearfix">
+							<div class="review_userHead fl">
+								<div class="review_user">
+									<img src="img/icon/4.详细页 - 商品评价_r10_c2.gif" alt="">
+									<p>61***42</p>
+									<p>金色会员</p>
+								</div>
+							</div>
+							<div class="review_cont fl">
+								<div class="review_t clearfix">
+									<div class="starsBox fl">
+										<span class="stars"></span>
+										<span class="stars"></span>
+										<span class="stars"></span>
+										<span class="stars"></span>
+										<span class="stars"></span>
+									</div>
+									<span class="stars_text fl">5 分 满意</span>
+								</div>
+								<p>挺不错的，信赖慕课</p>
+								<p><a href="#" class="ding">踩(0)</a><a href="#" class="cai">顶(10)</a></p>
+							</div>
+						</div>
+						<div class="hr_15"></div>
+						<div class="review_list clearfix">
+							<div class="review_userHead fl">
+								<div class="review_user">
+									<img src="img/icon/4.详细页 - 商品评价_r12_c2.gif" alt="">
+									<p>61***42</p>
+									<p>银牌会员</p>
+								</div>
+							</div>
+							<div class="review_cont fl">
+								<div class="review_t clearfix">
+									<div class="starsBox fl">
+										<span class="stars"></span>
+										<span class="stars"></span>
+										<span class="stars"></span>
+										<span class="stars"></span>
+										<span class="stars"></span>
+									</div>
+									<span class="stars_text fl">5 分 满意</span>
+								</div>
+								<p>挺不错的，信赖慕课挺不错的，信赖慕课挺不错的，信赖慕课挺不错的，信赖慕课</p>
+								<p><a href="#" class="ding">踩(0)</a><a href="#" class="cai">顶(10)</a></p>
+							</div>
+						</div>
+					</div>
+				<div class="hr_45"></div>				
+				<div class="page">
+			   	 <a href="#">上一页</a><a href="#">1</a><a href="#">2</a><a href="#">3</a><a href="#">4</a>
+			   	 <a href="#">5</a><a href="#">6</a><a href="#">7</a><a href="#">8</a><span class="h1">...</span>
+			   	 <a href="#">200</a><a href="#">下一页</a><span class="morepage">共200页，到第</span>
+			   	 <input type="text" class="pageNum"><span class="ye">页</span><input type="button" value="确定" class="bt"> 
+			    </div>
+			    <div class="hr_15"></div>
 				</div>
 			</div>
 		</div>
