--- a/注册.html
+++ b/注册.html
@@ -16,7 +16,7 @@
 						<a href="#" class="collection">收藏慕课</a>
 					</div>
 					<div class="rightArea">
-						欢迎来到慕课网！<a href="登录.html">[登录]</a><a href="注册.html">[免费注册]</a>
+						欢迎来到慕课网！<a href="#">[登录]</a><a href="#">[免费注册]</a>
 					</div>
 				</div>
 			</div>
@@ -30,7 +30,7 @@
 						<input type="button" value="搜索" class="search_btn fr">
 					</div>
 					<div class="shopCar fr">
-						<span class="shopText fl"><a href="购物车.html">购物车</span>
+						<span class="shopText fl">购物车</span>
 						<span class="shopNum fl">0</span>
 					</div>
 				</div>
@@ -38,7 +38,7 @@
 			<div class="navBox">
 				<div class="comWidth">
 					<div class="shopClass fl">
-						<h3><a href="产品分类.html">全部商品分类<i></i></h3>
+						<h3>全部商品分类<i></i></h3>
 						<div class="shopClass_show show">
 							<dl class="shopClass_items">
 								<dt>
@@ -219,7 +219,7 @@
 		<div class="shopTit comWidth">
 			<span class="icon"></span>
 			<h3>家用电脑</h3>
-			<a href="产品筛选.html" class="more">更多&gt;&gt;</a>
+			<a href="#" class="more">更多&gt;&gt;</a>
 		</div>
 		<div class="shopList comWidth clearfix">
 			<div class="leftArea">
@@ -303,7 +303,7 @@
 					</div>
 					<div class="shopitem_sm">
 						<div class="shopitem_smImg">
-							<a href="商品介绍.html"><img src="img/banner/banner09.gif" alt="" </a>
+							<a href="#"><img src="img/banner/banner09.gif" alt="" </a>
 						</div>
 						<div class="shopitem_text">
 							<p>pple苹果 全新Retina屏MacBoo</p>
@@ -316,7 +316,7 @@
 		<div class="shopTit comWidth">
 			<span class="icon"></span>
 			<h3>食品酒水</h3>
-			<a href="产品筛选.html" class="more">更多&gt;&gt;</a>
+			<a href="#" class="more">更多&gt;&gt;</a>
 		</div>
 		<div class="shopList comWidth clearfix">
 			<div class="leftArea">
@@ -413,13 +413,11 @@
 		<div class="h2_25"></div>
 		<div class="footer">
 			<p><a href="#">慕课简介</a><i>|</i>
-			   <a href="#">慕课公告</a><i>|</i>
-			   <a href="#">招纳贤士</a><i>|</i> 
-				联系我们|客服热线：400-675-1234</p>
-			<p>Copyright &copy; 2006 - 2014 慕课版权所有&nbsp;&nbsp;&nbsp;
-			       京ICP备09037834号&nbsp;&nbsp;&nbsp;  
-			       京ICP证B1034-8373号&nbsp;&nbsp;&nbsp;   
-			                  某市公安局XX分局备案编号：123456789123</p>
+				<a href="#">慕课公告</a><i>|</i>
+				<a href="#">招纳贤士</a><i>|</i> 联系我们|客服热线：400-675-1234
+			</p>
+			<p>Copyright &copy; 2006 - 2014 慕课版权所有&nbsp;&nbsp;&nbsp; 京ICP备09037834号&nbsp;&nbsp;&nbsp; 京ICP证B1034-8373号&nbsp;&nbsp;&nbsp; 某市公安局XX分局备案编号：123456789123
+			</p>
 			<p class="webLogo">
 				<a href="#"><img src="img/webLogo.gif" alt="logo"></a>
 				<a href="#"><img src="img/webLogo.gif" alt="logo"></a>
